# SCUT2025Winter-

./: README.md
Java/: 周子超lab1实验报告.docx  周子超lab2实验报告 .docx  周子超lab3实验报告.docx  周子超lab4实验报告.docx
大物实验/: 24级 软件工程专业 周子超 22号 光栅特性与波长的测定.docx  24级 软件工程专业 周子超 22号 变温霍尔效应.docx  24级 软件工程专业 周子超 22号 混沌电路.docx  24级 软件工程专业 周子超 22号 用三线摆测转动惯量.docx  24级 软件工程专业 周子超 22号 红外线物理特性.docx  24级 软件工程专业 周子超 22号 莫尔效应及光栅传感.docx  24级 软件工程专业 周子超 22号 超声光栅及其应用.docx  24级 软件工程专业 周子超 22号 超声波声速测量.docx  24级 软件工程专业 周子超 22号 迈克尔逊干涉仪.docx  24级 软件工程专业 周子超 22号 铁磁物质磁化曲线和磁滞回测量.docx  三线摆测量物体的转动惯量.docx  固体导热系数测量.docx  固体导热系数测量实验数据.docx  固体导热系数测量实验数据处理.docx  实验报告模板.docx  实验数据.docx  磁滞回线实验数据处理.docx  空间滤波与θ调制.docx  霍尔效应实验数据处理实验报告.docx
数据结构/: 数据结构考试复习提纲 (2025fall).docx
数据结构/Homework/: Data_Structure_HWs_for_2024_SE4_4 (1).docx
数据结构/Program1/HomeWorkProgram1/ArrayBasedList/: CMakeLists.txt
数据结构/Program1/HomeWorkProgram1/ArrayBasedList/Program1/: MyAList.cpp  MyAList.h  Test.cpp
数据结构/Program1/HomeWorkProgram1/ArrayBasedList/Program2/: Book.cpp  Book.h  BookManager.cpp  BookManager.h  BookTest.cpp  说明文档
数据结构/图论/: 图的表示 邻接表和邻接矩阵.cpp  图的遍历 DFS和BFS.cpp  拓扑排序.cpp  最小生成树 Prim和Kruskal.cpp  最短路径.cpp
数据结构/数据结构ppt/: 修改lec2 Algorithm Analysis(1).pptx  修改lec3 List Stack & Queue.pptx  修改lec4-1 Trees I.pptx  修改lec4-2 Trees II.pptx  修改lec4-3 Trees III.pptx  修改lec5 Hashing.pptx  修改lec6 Heap&priority queue.pptx  修改lec7-2 Sorting II.pptx  修改lec7-3 Sorting III.pptx  修改lec7-4 Sorting IV.pptx  修改lec7-5 Sorting V.pptx  修改lec8 Disjoint Set & Class.pptx  修改lec9-1 Graph Algorithms I.pptx  (+2 more)
计算机组成原理/: 计算机组成原理考题 2020.docx
(+43 files in other folders)
